[gd_scene load_steps=3 format=3 uid="uid://b54oe2oana7m7"]

[ext_resource type="Script" path="res://dragons/stone_dragon.gd" id="1_ptykq"]
[ext_resource type="Texture2D" path="res://tmp-dragon.jpg" id="2_vs6pj"]

[node name="stone_dragon" type="CharacterBody2D"]
script = ExtResource("1_ptykq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_vs6pj")

[node name="InitialPosition" type="Marker2D" parent="."]
position = Vector2(-100, 200)

[node name="DefaultPosition" type="Marker2D" parent="."]
position = Vector2(100, 250)

[node name="StoneAttackPosition" type="Marker2D" parent="."]
position = Vector2(300, 50)

[node name="ExitPosition" type="Marker2D" parent="."]
position = Vector2(1400, 100)
